--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <label for="dT">
                     <input onchange="radioText()" type="radio" id="dT" name="cutPos" value="davor trennen">DAVOR TRENNEN
                 </label>
-                <h3>DANACH</h3>
+              <!--  <h3>DANACH</h3>-->
 
                 <label for="daT" >
                     <input onchange="radioText()" checked type="radio" id="daT" name="cutPos" value="danach trennen">DANACH TRENNEN
@@ -51,7 +51,7 @@
 
 
         <section>
-            <h2>Ausgabe</h2>
+            <h2>AUSGABE MIT WORT DANACH</h2>
 
             <article>
                 <div>
